# Scalable-Recognition-using-Vocabulary-Tree

./: .gitignore  CMakeLists.txt  CSS587_EnhancedVocabularyTrees_SugamArsheyaJosiah.docx  EnhancedVocabularyTrees_DesignReview_SugamArsheyaJosiah.docx  EnhancedVocabularyTrees_ResearchPaper_SugamArsheyaJosiah.docx  Project proposal - Arsheya, Sugam and Josiah.docx  README.md
Project/: Project.sln
Project/Project/: Database.h  Database_DVD_DB_50.txt  FeatureDetector1.h  Homography.h  OpenCV_Debug.props  Project.vcxproj  Project.vcxproj.filters  VocabNode.h  coco.py  database.cpp  database.py  feature.cpp  homography.cpp  main  main.cpp  main1.cpp
Project/Project/data/DVD-Query-50-1/: index.html  index.html~
Project/Project/main.dSYM/Contents/Resources/DWARF/: main
Project/Project/x64/Debug/: Project.exe.recipe  Project.ilk  vc143.idb
Project/Project/x64/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
